# healthai-assistant

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  healthai-deploy-key.pem  pyproject.toml  requirements-demo.txt  requirements.txt  run.py  run_demo.py
.github/workflows/: deploy.yml
assets/styles/: main.css
assets/views/: conversation.html
aws/: cloudformation.yaml
config/: __init__.py  prompts.py  settings.py
core/: __init__.py  document_processor.py  embedding_service.py  text_chunker.py
scripts/: cleanup_aws.py  initialize_database.py
services/: __init__.py  conversation_engine.py  vector_database.py
web/: __init__.py  handlers.py  routes.py  server.py
